Updated Project Name

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>EuroSplit-44605</name>
+	<name>EuroSplit-44605-44949</name>
 	<comment></comment>
 	<projects>
 	</projects>
