--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,16 @@
   <groupId>fcul.pco</groupId>
   <artifactId>EuroSplit-44605-44949</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
