--- a/.classpath
+++ b/.classpath
@@ -34,5 +34,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Maven: com.google.guava:guava:16.0.1"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
